crates/general/fixtures/invalid/stale_type_declaration.zt
type Server = {
  host : Text;
};

#unit
